# DigifarmBackend

./: Makefile  README.md  pyproject.toml
digifarm/: asgi.py  settings.py  urls.py  wsgi.py
