[project]
name = "digifarmbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "celery>=5.5.1",
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pillow>=11.2.1",
    "redis>=5.2.1",
]
